# smser

./: .gitignore  deploy.sh  main.py  pyproject.toml  systemd.service
smser/: __main__.py  at_commands.py  config.py  main.py  sms_pdu.py  sms_port.py  telegram_forwarder.py  ussd.py
